# notes

./: Cargo.toml
migrations/: 20250830010601_schema.sql
src/: error.rs  main.rs  notes.rs  state.rs
