[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web stack
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

# Observability
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

# Local crates
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "tls-rustls"] }
dotenvy = "0.15.7"
anyhow = "1.0.99"
